[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_preprocessing_pipeline"
version = "0.1"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "torch; platform_system != 'Windows'",
  "datasets",
  "cyy_naive_lib@git+https://github.com/cyyever/naive_python_lib.git@main",
]

[tool.setuptools.package-data]
cyy_preprocessing_pipeline = ["py.typed"]

[project.urls]
Repository = "https://github.com/cyyever/preprocessing_pipeline"

[tool.ruff]
target-version = "py312"
src = ["cyy_preprocessing_pipeline"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

