[project]
name = "cyy_preprocessing_pipeline"
version = "0.1"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "BSD License" }
authors = [
  { name = "cyy", email = "cyyever@outlook.com" },
]
classifiers = ["Programming Language :: Python"]
dependencies = [
  "cyy_naive_lib@git+https://github.com/cyyever/naive_python_lib.git@main",
  "datasets",
  "torch",
  "bs4"
]

[project.urls]
Repository = "https://github.com/cyyever/preprocessing_pipeline"

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
src = ["cyy_preprocessing_pipeline"]
exclude = ["build"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.setuptools.package-data]
cyy_preprocessing_pipeline = ["py.typed"]
